examples/type_system/failing/178_import_except_missing_open_bracket.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/178_import_except_missing_open_bracket.flx
// error[E034]: Missing Import Except List
//
// Expected `[` after `except` in import.
//
//   examples/type_system/failing/178_import_except_missing_open_bracket.flx:20:23
//    |
// 20 | import Foo.Bar except x, y ]
//    |                       ^
//
// Hint:
//   Import exclusions use `import Module except [Name1, Name2]`.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E034

import Foo.Bar except x, y ]
let after = 1
